--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -4,14 +4,19 @@ metadata:
   name: connector-demo
 build:
   tagPolicy:
-    customTemplate:
-      template: "latest"
+    envTemplate:
+      template: "{{.VERSION}}"
   artifacts:
     - image: europe-west1-docker.pkg.dev/deepomatic-160015/docker-main/connector-demo
       platforms: ["linux/amd64"]
       docker:
         dockerfile: Dockerfile
 manifests:
+  hooks:
+    before:
+      - host:
+          command: ["sed", "-i ''", "-E", '"s/^    newTag: .+$/    newTag: $(jq .version package.json -r)/g"', "manifests/kustomization.yaml"]
+
   kustomize:
     paths:
       - manifests
